--- a/MazeGame/MazeGame/MazeGame.vcxproj.filters
+++ b/MazeGame/MazeGame/MazeGame.vcxproj.filters
@@ -82,28 +82,34 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="bomb_party_v4.png">
+    <Image Include="Assets\Sprites\Axe.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="player-sized-pumpkin.png">
+    <Image Include="Assets\Sprites\bomb_party_v4.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="Player_Sprite_Sheet_32_32.png">
+    <Image Include="Assets\Sprites\Door.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assets\Sprites\Player_Sprite_Sheet_32_32.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assets\Sprites\player-sized-pumpkin.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assets\Sprites\Potion.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assets\Tileset\Tile_Sheet_32x32.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <None Include="level1.tmx">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="level1map.tmx">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="level2map.tmx">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="level3map.tmx">
-      <Filter>Resource Files</Filter>
-    </None>
+    <None Include="Assets\Levels\Level_1_Test.tmx" />
+    <None Include="Assets\Levels\Level_2_Test.tmx" />
+    <None Include="Assets\Levels\level1.tmx" />
+    <None Include="Assets\Levels\level1map.tmx" />
+    <None Include="Assets\Levels\level2map.tmx" />
+    <None Include="Assets\Levels\level3map.tmx" />
   </ItemGroup>
 </Project>
